# matrix-rs

./: AGENT.md  Cargo.toml  README.md
src/: det.rs  eigen.rs  inverse.rs  lib.rs  lu.rs  matrix.rs  qr.rs
